--- a/aboutus.html
+++ b/aboutus.html
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
         <a class="navbar-brand" href="#">
-            <img src="img/Background.png" alt="Company Logo" class="HeadIMG img-fluid">
+            <img src="./img/Background.png" alt="Company Logo" class="HeadIMG img-fluid">
              <h5 class="pt-6 fs-6 text-success">AppleSpark Corporation <br>  Est. 2001</h5>
          </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
