--- a/contactus.html
+++ b/contactus.html
@@ -22,14 +22,18 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active fs-4 text-secondary text-decoration-none" aria-current="page" href="index.html">Home</a>
+                <a class="nav-link active fs-5 text-secondary text-decoration-none" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                 <a href="aboutus.html" target="_blank" class="fs-4 text-secondary text-decoration-none nav-link ">About Us</a>
+                 <a href="aboutus.html" target="_blank" class="fs-5 text-secondary text-decoration-none nav-link ">About Us</a>
               </li>
               <li class="nav-item">
-                <a href="contactus.html" target="_blank" class="fs-4 text-secondary text-decoration-none nav-link ">Contact Us</a>
+                <a href="contactus.html" target="_blank" class="fs-5 text-secondary text-decoration-none nav-link ">Contact Us</a>
               </li>
+              <li class="nav-item">
+                <a href="services.html" target="_blank"
+                    class="fs-5 text-secondary text-decoration-none nav-link ">Services</a>
+            </li>
             </ul>
           </div>
         </div>
@@ -62,6 +66,13 @@
              </div>
            </div>
    </section>
+    <!-- footer section-->
+    <section class="p-3 bg-light mt-5 text-center">
+      <div class="container">
+          <p>Sample text. Click to select the text box. Click again or double<br> click to start editing the text.</p><br>
+          <p><a href="https://nicepage.com/website-templates">Website Templates</a> created with <a href="https://nicepage.com/">Website Builder Software.</a></p>
+      </div>
+  </section>
    <script src="main/bootstrap.min.js"></script>
 </body>
 </html>
