--- a/index.html
+++ b/index.html
@@ -26,16 +26,20 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active fs-4 text-secondary text-decoration-none" aria-current="page"
+                        <a class="nav-link active fs-5 text-secondary text-decoration-none" aria-current="page"
                             href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a href="aboutus.html" target="_blank"
-                            class="fs-4 text-secondary text-decoration-none nav-link ">About Us</a>
+                            class="fs-5 text-secondary text-decoration-none nav-link ">About Us</a>
                     </li>
                     <li class="nav-item">
                         <a href="contactus.html" target="_blank"
-                            class="fs-4 text-secondary text-decoration-none nav-link ">Contact Us</a>
+                            class="fs-5 text-secondary text-decoration-none nav-link ">Contact Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="services.html" target="_blank"
+                            class="fs-5 text-secondary text-decoration-none nav-link ">Services</a>
                     </li>
                 </ul>
             </div>
@@ -45,7 +49,7 @@
     <section class="form">
         <div class="container">
             <div class="row">
-                <div class="col-12 col-md-6 col-lg-6 d-flex align-items-center">
+                <div class="col-sm-12 col-md-6 col-lg-6 d-flex align-items-center justify-content-center">
                     <div>
                         <p class="text-warning fs-1 fw-bold px-3 text-nowrap mx-4">
                             When It Comes To <br> Reliability, We Are The <br> One You Need!
@@ -99,9 +103,7 @@
             trucks/trailers.</p>
     </section>
     <!--Link to services section-->
-    <div class="btn border border-3 my-4 mx-5">
-        <a href="services.html" class="text-decoration-none text-dark">Go to Services Page</a>
-    </div>
+  
     <!--LandingPage Closing section-->
     <section class="">
         <div class="d-flex flex-wrap">
@@ -134,6 +136,13 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+    <!-- footer section-->
+    <section class="p-3 bg-light mt-5 text-center">
+        <div class="container">
+            <p>Sample text. Click to select the text box. Click again or double<br> click to start editing the text.</p><br>
+            <p><a href="https://nicepage.com/website-templates">Website Templates</a> created with <a href="https://nicepage.com/">Website Builder Software.</a></p>
         </div>
     </section>
     <script src="main/bootstrap.min.js"></script>
